# cursed-rtx

./: .gitignore  Cargo.toml
assets/: tile.vox
src/: main.rs  mesh.rs  object.rs
