[package]
name = "dx9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
libloading = "0.8.0"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Foundation_Numerics",

    "Win32_System_SystemServices",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }
